--- a/index.html
+++ b/index.html
@@ -11,3 +11,58 @@ Time - 7:12 PM
 
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>My Calculator</title>
+</head>
+<body>
+    <div class="main-div">
+        <div class="header">
+            <h1>Calculator</h1>
+        </div>
+        <div class="calculator">
+            <div class="monitor">
+                <input type="text" id="result" maxlength="15">
+            </div>
+            <div class="keypad">
+                <div>
+                    <input type="button" value="C" class="btn">
+                    <input type="button" value="+/-" class="btn">
+                    <input type="button" value="%" class="btn">
+                    <input type="button" value="/" class="btn btn-style">
+                </div>
+                <div>
+                    <input type="button" value="7" class="btn">
+                    <input type="button" value="8" class="btn">
+                    <input type="button" value="9" class="btn">
+                    <input type="button" value="X" class="btn btn-style">
+                </div>
+                <div>
+                    <input type="button" value="4" class="btn">
+                    <input type="button" value="5" class="btn">
+                    <input type="button" value="6" class="btn">
+                    <input type="button" value="-" class="btn btn-style">
+                </div>
+                <div>
+                    <input type="button" value="1" class="btn">
+                    <input type="button" value="2" class="btn">
+                    <input type="button" value="3" class="btn">
+                    <input type="button" value="+" class="btn btn-style">
+                </div>
+                <div>
+                    <input type="button" value="0" class="btn">
+                    <input type="button" value="." class="btn">
+                    <input type="button" value="DEL" class="btn">
+                    <input type="button" value="=" class="btn btn-equal">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
